Feature SQL in Azure

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,11 +12,15 @@ spring:
   # DB
   # ===============================
   datasource:
-    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    driverClassName: org.h2.Driver
-    platform: h2
-    username: sa
-    password:
+    #url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:sqlserver://idelity-test.database.windows.net:1433;database=registraduria-app;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+    #driverClassName: org.h2.Driver
+    driverClassName: com.microsoft.sqlserver.jdbc.SQLServerDriver
+    #platform: h2
+    username: idelity-test@idelity-test
+    #username: sa
+    password: Dontknow1
+    #password:
 
   # ===============================
   # JPA / HIBERNATE
@@ -25,7 +29,8 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
-    database-platform: org.hibernate.dialect.H2Dialect
+    #database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.SQLServer2012Dialect
     properties:
       hibernate:
         show_sql: true
